--- a/bmi.css
+++ b/bmi.css
@@ -14,8 +14,17 @@ form {
     border-radius: 8px;
     background-color: lightblue;
 }
-form p {
-    color: white;
+form label {
+    color: rgb(70, 67, 67);
+    font-size: 26px;
+}
+
+form input {
+    display: block;
+    width: 35%;
+    margin: 10px 0;
+    text-align: center;
+    font-size: 20px;    
 }
 
 p {
@@ -24,5 +33,18 @@ p {
 
 
 button {
-    margin-top: 20px;
+    margin-top: 10px;
+    color: brown;
+    background-color: lightskyblue;
+    font-size: 20px;
+    border: solid red 2px;
+    border-radius: 6px;
+    padding: 8px;
+    transition: 300ms;
+}
+
+button:hover {
+    background-color: coral;
+    color: white;
+    cursor: pointer;
 }
