--- a/bmi.css
+++ b/bmi.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 h2 {
     text-align: center;
 }
@@ -47,4 +50,24 @@ button:hover {
     background-color: coral;
     color: white;
     cursor: pointer;
+}
+
+.notDisplaying {
+    display: none;
+}
+
+.answers {
+    background-color: #c2c2c2;
+    width: 60%;
+    margin: 30px auto;
+    padding: 10px;
+}
+
+#answer, #answer2 {
+    background-color: lightcyan;
+    padding: 10px;
+    width: 60%;
+    margin: 40px auto;
+    text-align: center;
+    transition: 100ms;
 }
