--- a/bmi.css
+++ b/bmi.css
@@ -28,7 +28,13 @@ form input {
     width: 35%;
     margin: 10px 0;
     text-align: center;
-    font-size: 20px;    
+    font-size: 20px;
+    padding: 5px 0px;   
+}
+
+form input:focus {
+    background-color: #c2c2c2;
+    color: darkblue;
 }
 
 p {
