--- a/bmi.css
+++ b/bmi.css
@@ -29,13 +29,16 @@ form input {
     margin: 10px 0;
     text-align: center;
     font-size: 20px;
-    padding: 5px 0px;   
+    padding: 5px 0px;  
+    border: none; 
 }
 
 form input:focus {
     background-color: #c2c2c2;
     color: darkblue;
 }
+
+
 
 p {
     font-size: 25px;
